k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openanonymiser
  labels:
    app: openanonymiser
spec:
  type: ClusterIP
  selector:
    app: openanonymiser
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
