k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openanonymiser
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "OpenAnonymiser - Authentication Required"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.openanonymiser.commonground.nu
      secretName: openanonymiser-tls
  rules:
    - host: api.openanonymiser.commonground.nu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openanonymiser
                port:
                  number: 80
